# protocol

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: client_handshake.rs  error.rs  msg.rs  pub.rs  server_handshake.rs  sub.rs  unsub.rs
src/: common.rs  decode.rs  lib.rs  state.rs
src/send_to_client/: decode.rs  encode.rs  mod.rs
src/send_to_server/: decode.rs  encode.rs
tests/: client_handshake.rs  error.rs  msg.rs  pub.rs  server.rs  server_handshake.rs  sub.rs  unsub.rs
