[package]
name = "protocol"
version = "0.1.0"
authors = ["neetdai <974498346@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.6"
thiserror = "1.0.20"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "client_handshake"
harness = false

[[bench]]
name = "server_handshake"
harness = false

[[bench]]
name = "error"
harness = false

[[bench]]
name = "sub"
harness = false

[[bench]]
name = "pub"
harness = false

[[bench]]
name = "msg"
harness = false
